[tool.poetry]
name = "storysprites"
version = "0.1.0"
description = "AI Storytelling done right"
authors = ["Danny Key <danny@dannydabbles.com>"]
license = "Mozilla"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.1.13"
chainlit = "^1.0.401"
openai = "^1.14.3"
tiktoken = "^0.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
